# Rasterizer

./: BaseShader.cpp  BaseShader.h  BlinnPhongShader.cpp  BlinnPhongShader.h  BufferObject.cpp  BufferObject.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  GPU.cpp  GPU.h  General.cpp  General.h  HalfLambertShader.cpp  HalfLambertShader.h  Image.cpp  Image.h  Matrix.cpp  Matrix.h  Model.cpp  Model.h  OBJModel.cpp  OBJModel.h  Point.cpp  Point.h  Rasterizer.cpp  Rasterizer.h  Render.cpp  Render.h  SimpleShader.cpp  SimpleShader.h  Vector.h  VertexArrayObject.cpp  VertexArrayObject.h  WindowController.cpp  WindowController.h  main.cpp  main.h
